# discovery-trees

./: .gitignore  CLAUDE.md  README.md  dt  test.sh
cli/: pyproject.toml
cli/src/dt/: cli.py
cli/tests/: conftest.py  test_cli.py  test_cli.test_show_empty.approved.txt
docs/: decisions.md  design.md  tech_stack.md  todo.md
docs/sessions/: 2026-03-19.md  TEMPLATE.md
