[project]
name = "dt"
version = "0.1.0"
description = "Discovery Trees CLI"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
dt = "dt.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
