[project]
name = "dt"
version = "0.1.0"
description = "Discovery Trees CLI"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
dt = "dt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dt"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest", "approvaltests"]
